--- a/LR1/MainStyle.css
+++ b/LR1/MainStyle.css
@@ -6,11 +6,13 @@
 nav.navbar .dropdown:hover > .dropdown-menu {
     display: block;
 }
-a {
+a.contact-phone {
+    color: black;
     text-decoration: none;
 }
-a:hover {
-    text-decoration: underline;
+a.contact-mail {
+    color: black;
+    text-decoration: none;
 }
 .btn btn-secondary dropdown-toggle {
     padding: 0;
