--- a/LR1/MainStyle.css
+++ b/LR1/MainStyle.css
@@ -24,3 +24,9 @@ body {
     font-family: 'Open Sans';
     text-align: inherit;
 }
+.articles{
+    justify-content: right;
+}
+.dropdown{
+    justify-content: left;
+}
